Don't dup strings before passing them to type registration functions

Strings passed to g_enum_register_static and g_flags_register_static are
eventually passed to g_quark_from_string, which dups the string passed to it if
needed and does not take ownership of it, so passing in a dynamically-allocated
string without freeing it results in a small leak.

https://bugzilla.gnome.org/show_bug.cgi?id=690532